# ai_journal

./: .env.example  Cargo.toml  README.md
src/: commands.rs  common_types.rs  dialogue.rs  main.rs  open_ai.rs
