[package]
name = "ai_journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["full", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
chrono = "0.4.23"
